--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link href="https://fonts.google.com/specimen/Work+Sans" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link href="./output.css" rel="stylesheet">
   
   <title>Frontend Mentor | FAQ accordion</title>
 
@@ -18,7 +19,7 @@
   </style>
 </head>
 <body>
-
+<div>
   <h1>FAQs</h1>
 
   <h2>What is Frontend Mentor, and how will it help me?</h2>
@@ -41,7 +42,7 @@
   
   The best place to get help is inside Frontend Mentor's Discord community. There's a help 
   channel where you can ask questions and seek support from other community members.
-
+</div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
