--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link href="https://fonts.google.com/specimen/Work+Sans" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link href="./output.css" rel="stylesheet">
   
   <title>Frontend Mentor | FAQ accordion</title>
 
@@ -19,30 +18,30 @@
   </style>
 </head>
 <body>
-<div>
-  <h1>FAQs</h1>
+  <div class="accordian-holder">
+    <h1>FAQs</h1>
 
-  <h2>What is Frontend Mentor, and how will it help me?</h2>
+    <h2>What is Frontend Mentor, and how will it help me?</h2>
 
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
+    Frontend Mentor offers realistic coding challenges to help developers improve their 
+    frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
+    all levels and ideal for portfolio building.
 
-  <h2>Is Frontend Mentor free?</h2>
+    <h2>Is Frontend Mentor free?</h2>
 
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
+    Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+    option providing access to a range of projects suitable for all skill levels.
 
-  <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+    <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
 
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
+    Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+    way to showcase your skills to potential employers!
 
-  <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
-  
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
-</div>
+    <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
+    
+    The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+    channel where you can ask questions and seek support from other community members.
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
