--- a/index.html
+++ b/index.html
@@ -6,41 +6,43 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link href="https://fonts.google.com/specimen/Work+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Miniver&family=Playwrite+BR:wght@100..400&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet" >
   
   <title>Frontend Mentor | FAQ accordion</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
+<header><img src="assets/images/background-pattern-desktop.svg"></header>
 <body>
+  
+  
   <div class="accordian-holder">
-    <h1>FAQs</h1>
+    <h1><img src="assets/images/icon-star.svg">  FAQs</h1>
 
-    <h2>What is Frontend Mentor, and how will it help me?</h2>
+    <h2 >What is Frontend Mentor, and how will it help me?<img class="open" src="assets/images/icon-plus.svg"></h2>
+    
 
-    Frontend Mentor offers realistic coding challenges to help developers improve their 
-    frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-    all levels and ideal for portfolio building.
+      <p hidden> Frontend Mentor offers realistic coding challenges to help developers improve their 
+      frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
+      all levels and ideal for portfolio building.</p>
 
     <h2>Is Frontend Mentor free?</h2>
 
-    Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-    option providing access to a range of projects suitable for all skill levels.
+      <p hidden>Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+      option providing access to a range of projects suitable for all skill levels.</p>
 
     <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
 
-    Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-    way to showcase your skills to potential employers!
-
+      <p hidden>Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+      way to showcase your skills to potential employers!
+      </p>
     <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
     
-    The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-    channel where you can ask questions and seek support from other community members.
+      <p hidden>The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+      channel where you can ask questions and seek support from other community members.</p>
   </div>
   
   <div class="attribution">
